First version working
This is the first version working of the app.
Improvements to add:
1) notifications
2)enhance graphics

--- a/BookCrossing/app/src/main/res/layout/activity_book_history.xml
+++ b/BookCrossing/app/src/main/res/layout/activity_book_history.xml
@@ -6,7 +6,7 @@
     tools:context="com.example.antonio.bookcrossing.SearchBooks" >
 
     <fragment
-        android:id="@+id/map"
+        android:id="@+id/mapHistory"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         class="com.google.android.gms.maps.MapFragment" />
