--- a/BookCrossing/app/src/main/res/layout/activity_action_chooser.xml
+++ b/BookCrossing/app/src/main/res/layout/activity_action_chooser.xml
@@ -7,7 +7,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#AAFFFDBB"
-    tools:context="com.example.antonio.bookcrossing.actionChooserActivity">
+    tools:context="com.example.antonio.bookcrossing.actionChooserActivity"
+    android:id="@+id/activity_chooser_view_content">
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,9 +17,8 @@
         android:text="Points: "
         android:id="@+id/points"
         android:textColor="#007AF0"
-        android:layout_marginTop="93dp"
         android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/deposit" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -48,8 +48,9 @@
         android:textColor="#007AF0"
         android:background="#FFF700"
         android:onClick="depositBook"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/search" />
+        android:layout_marginTop="71dp"
+        android:layout_below="@+id/frameLayout"
+        android:layout_alignParentLeft="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -58,20 +59,10 @@
         android:id="@+id/search"
         android:textColor="#007AF0"
         android:background="#FFF700"
-        android:layout_below="@+id/deposit"
         android:onClick="searchBooks"
-        android:layout_alignLeft="@+id/button3" />
+        android:layout_below="@+id/deposit"
+        android:layout_toRightOf="@+id/deposit" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Quit"
-        android:id="@+id/button3"
-        android:textColor="#007AF0"
-        android:background="#FFF700"
-        android:onClick="exitApp"
-        android:layout_below="@+id/search"
-        android:layout_centerHorizontal="true" />
 
     <FrameLayout
         android:layout_width="80dp"
@@ -80,5 +71,44 @@
         android:layout_toLeftOf="@+id/books"
         android:id="@+id/frameLayout">
         </FrameLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BookTaken"
+        android:textColor="#007AF0"
+        android:background="#FFF700"
+        android:id="@+id/bookTaken"
+        android:onClick="bookTaken"
+        android:layout_below="@+id/search"
+        android:layout_toRightOf="@+id/search" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/isbnT"
+        android:layout_alignBottom="@+id/bookTaken"
+        android:layout_toRightOf="@+id/rank"
+        android:layout_alignParentRight="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Show book history"
+        android:textColor="#007AF0"
+        android:background="#FFF700"
+        android:id="@+id/show"
+        android:onClick="bookHistory"
+        android:layout_below="@+id/isbnT"
+        android:layout_alignParentLeft="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/isbnS"
+        android:layout_alignBottom="@+id/show"
+        android:layout_toRightOf="@+id/show"
+        android:layout_alignRight="@+id/isbnT" />
+
 
 </RelativeLayout>
