--- a/BookCrossing/app/src/main/res/layout/activity_deposit_book.xml
+++ b/BookCrossing/app/src/main/res/layout/activity_deposit_book.xml
@@ -6,21 +6,22 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="#AAFFFDBB"
     tools:context="com.example.antonio.bookcrossing.DepositBook">
-    <FrameLayout
+    <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
+        android:id="@+id/imageView"
         android:onClick="startCamera"
-        android:id="@+id/bookImage"
-        android:contentDescription="Click to input an image"></FrameLayout>
+        android:background="@drawable/obiettivo" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/bookImage"
+        android:id="@+id/linearLayout2"
+        android:layout_below="@+id/imageView"
+        android:textColor="#6600FFA0"
         android:layout_alignParentLeft="true">
 
         <TextView
@@ -28,11 +29,14 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Author: "
+            android:textColor="#007AF0"
             android:id="@+id/textView2" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#007AF0"
+            android:ems="10"
             android:id="@+id/bookAuthor" />
 
         <TextView
@@ -40,11 +44,14 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Title: "
+            android:textColor="#007AF0"
             android:id="@+id/textView3" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#007AF0"
+            android:ems="10"
             android:id="@+id/bookTitle" />
 
         <TextView
@@ -52,25 +59,30 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Position:"
+            android:textColor="#007AF0"
             android:id="@+id/textView4" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#007AF0"
             android:id="@+id/Gps" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Notes / Comments: "
-            android:id="@+id/notes" />
+            android:textColor="#007AF0"
+            android:text="ISBN: "
+            android:id="@+id/comments" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText3" />
+            android:textColor="#007AF0"
+            android:ems="10"
+            android:id="@+id/notes" />
+
 
         <Button
             android:layout_width="wrap_content"
@@ -78,8 +90,27 @@
             android:text="Deposit"
             android:id="@+id/depositBook"
             android:onClick="depositBook"
+            android:textColor="#007AF0"
             android:layout_gravity="center_horizontal" />
-
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView2"
+        android:onClick="rotateImage"
+        android:background="@drawable/rotazione"
+        android:layout_alignTop="@+id/imageView"
+        android:layout_toRightOf="@+id/imageView" />
+
+    <ImageButton
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:id="@+id/shareButton"
+        android:onClick="shareContent"
+        android:layout_below="@+id/imageView2"
+        android:layout_toRightOf="@+id/imageView"
+        android:background="@drawable/share" />
+
 
 </RelativeLayout>
